Fixed WP core media forms CSS distorted by Elementor's Editor CSS

--- a/assets/dev/scss/editor/_forms.scss
+++ b/assets/dev/scss/editor/_forms.scss
@@ -28,6 +28,11 @@ input, select, textarea, .elementor-input-style {
 	}
 }
 
+// Normalize form elements in WP's core media management modal
+.media-modal select {
+	width: initial;
+}
+
 .elementor-error {
 
 	input, select, textarea {
